--- a/ZohoAccounts/src/main/webapp/Login.css
+++ b/ZohoAccounts/src/main/webapp/Login.css
@@ -49,7 +49,16 @@ h2,h3
     color: black;  
 	background-color:rgb(30, 144, 255,0.8);
 	margin-left:30px;
+	cursor:pointer;
 } 
+
+#error
+{
+	color:red;
+	text-align:center;
+	font-family: "Times New Roman";
+	font-size: 50px;
+}
 
 #result
 {
