--- a/ZCoin/src/main/webapp/Manage.css
+++ b/ZCoin/src/main/webapp/Manage.css
@@ -1,30 +1,31 @@
 @charset "UTF-8";
 
 .container{
-  padding: 16px;
+  padding: 12px;
   border-radius: 20px ;  
   border:2px solid blur;
   box-shadow: 5px 10px #888888;
   width:600px;
   background-color:rgba(240, 240, 240,0.5); 
   position: absolute;
-    top:150px;;
+    top:200px;
     bottom: 350px;
     left: 550px;
     right: 0;
   
  }
- h1
+ h1,h2
  {
  text-align : center;
  }
  
- label
- {
- display: block;
- text-align: center;
- 
- }
+ #result
+{
+	color:red;
+	text-align:center;
+	font-size : 30px;
+	
+}
  
  input[type=text],input[type=password]{
   width: 50%;
@@ -33,7 +34,7 @@
   display: inline-block;
   border: 1px solid ;
   box-sizing: border-box;
-  margin-left:30px;
+  margin-left:150px;
   
 }
  
@@ -45,6 +46,6 @@
     padding-left: 7px;  
     color: black;  
 	background-color:rgb(30, 144, 255,0.8);
-	margin-left:70px;
+	margin-left:150px;
 	cursor:pointer;
 } 
