--- a/ZCoin/src/main/webapp/Details.css
+++ b/ZCoin/src/main/webapp/Details.css
@@ -43,6 +43,12 @@ th
 	margin: auto;
     
 }
+.record,#result
+{
+	text-align :center;
+    color:Red;
+	font-size: 20px;
+}
 h2
 {
 	margin-left:300px;
