--- a/ZCoin/src/main/webapp/Manage.css
+++ b/ZCoin/src/main/webapp/Manage.css
@@ -14,6 +14,14 @@
     right: 0;
   
  }
+ label
+ {
+  display: block;
+    text-align: center;
+    line-height: 150%;
+    font-size: .85em;
+  
+ }
  h1,h2
  {
  text-align : center;
