--- a/ZCoin/src/main/webapp/Signup.css
+++ b/ZCoin/src/main/webapp/Signup.css
@@ -23,11 +23,11 @@ body,html
   
   }
   
- #msg
+ #msg,#result,#resultt
  {
  text-align :center;
  color:Red;
-	font-size: 30px;
+	font-size: 20px;
  }
   input[type=text],input[type=password]{
   width: 70%;
