--- a/ZCoin/src/main/webapp/Login.css
+++ b/ZCoin/src/main/webapp/Login.css
@@ -9,6 +9,13 @@ body,html
 	 
 }
 
+#topic
+{
+	
+     text-shadow: 1px 1px 2px black, 0 0 25px yellow, 0 0 5px Gold;
+     text-align : center;
+}
+
 input[type=text],input[type=password]{
   width: 50%;
   padding: 12px 20px;
