--- a/ZCoin/src/main/webapp/Login.css
+++ b/ZCoin/src/main/webapp/Login.css
@@ -15,7 +15,10 @@ body,html
      text-shadow: 1px 1px 2px black, 0 0 25px yellow, 0 0 5px Gold;
      text-align : center;
 }
-
+h1
+{
+	text-align : center;
+}
 input[type=text],input[type=password]{
   width: 50%;
   padding: 12px 20px;
@@ -57,6 +60,23 @@ h2,h3
 	background-color:rgb(30, 144, 255,0.8);
 	margin-left:30px;
 	cursor:pointer;
+} 
+.btn-grp{
+	  
+    border: none;  
+    border-radius: 10px;  
+    color: black;  
+	background-color:rgb(30, 144, 255,0.8);
+	margin : auto;
+	cursor:pointer;
+	 height:50px; 
+    width:50%; 
+    margin: -20px -50px; 
+    position:relative;
+    margin-top : 20px;
+    top:20%; 
+    left:30%;
+	
 } 
 
 #error
